tests/baselines/reference/parserObjectType5.errors.txt
parserObjectType5.ts(2,7): error TS2304: Cannot find name 'B'.
parserObjectType5.ts(3,7): error TS1005: '(' expected.


==== parserObjectType5.ts (2 errors) ====
    var v: {
       A: B
          ~
!!! error TS2304: Cannot find name 'B'.
       <T>;
          ~
!!! error TS1005: '(' expected.
    };